--- a/config_files/catalog-info.yaml
+++ b/config_files/catalog-info.yaml
@@ -17,6 +17,13 @@ metadata:
   name: user1
 spec:
   memberOf: team-a
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: laioe
+spec:
+  memberOf: team-a
 ---  
 apiVersion: backstage.io/v1alpha1
 kind: System
